# kungfu_chess

./: .gitignore  CMakeLists.txt  build-error.txt  cmake-error.txt  create_board.py  download_pieces.ps1  download_pieces.py  out.txt  output.txt
src/: CMakeLists.txt  main.cpp
src/engine/: gameEngine.cpp  gameEngine.hpp  moveRequester.hpp
src/graphics/: img.cpp  img.hpp
src/input/: boardMapper.cpp  boardMapper.hpp  controller.cpp  controller.hpp
src/io/: boardParser.cpp  boardParser.hpp  boardPrinter.cpp  boardPrinter.hpp
src/model/: board.cpp  board.hpp  gameSnapshot.hpp  piece.cpp  piece.hpp  position.cpp  position.hpp
src/realtime/: motion.cpp  motion.hpp  realTimeArbiter.cpp  realTimeArbiter.hpp
src/rules/: pieceRules.cpp  pieceRules.hpp  rookRule.cpp  rookRule.hpp  ruleEngine.cpp  ruleEngine.hpp
src/texttests/: ScriptRunner.cpp  ScriptRunner.hpp
src/view/: gameView.cpp  gameView.hpp  imageCatalog.cpp  imageCatalog.hpp  imgRenderTarget.cpp  imgRenderTarget.hpp  renderTarget.hpp  renderer.hpp
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt  ScriptRunnerTest.cpp
tests/integration/scripts/: 01_board_parsing.kfc
tests/unit/: BoardParserTest.cpp  BoardPrinterTest.cpp  CMakeLists.txt  boardMapperTest.cpp  boardTest.cpp  controllerTest.cpp  gameEngineTest.cpp  gameSnapshotTest.cpp  gameViewTest.cpp  motionTest.cpp  pieceRulesTest.cpp  pieceTest.cpp  positionTest.cpp  realTimeArbiterTest.cpp  rendererTest.cpp  rookRuleTest.cpp  ruleEngineTest.cpp
vpl/: ScriptRunner.cpp  board.cpp  board.hpp  boardMapper.hpp  boardParser.hpp  boardPrinter.cpp  boardPrinter.hpp  controller.cpp  controller.hpp  gameEngine.cpp  gameEngine.hpp  gameView.hpp  main.cpp  motion.hpp  moveRequester.hpp  piece.hpp  pieceRules.cpp  pieceRules.hpp  position.hpp  realTimeArbiter.cpp  realTimeArbiter.hpp  renderTarget.hpp  renderer.cpp  renderer.hpp  ruleEngine.hpp
